# doc2md

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agents/: invoice_extract.yaml  table_validator.yaml
docs/: architecture.md
pipelines/: invoice.yaml  invoice_parallel.yaml
src/doc2md/: __init__.py  cli.py  core.py  types.py
src/doc2md/agents/: classifier.py  engine.py  registry.py
src/doc2md/blackboard/: __init__.py  board.py  events.py  merge.py  regions.py  serializer.py  writers.py
src/doc2md/cache/: __init__.py  disk.py  keys.py  manager.py  memory.py  stats.py
src/doc2md/concurrency/: __init__.py  pool.py  rate_limiter.py
src/doc2md/confidence/: __init__.py  calibration.py  combiner.py  engine.py  report.py
src/doc2md/confidence/signals/: __init__.py  completeness.py  consistency.py  (+4 more)
src/doc2md/config/: defaults.py  hierarchy.py  loader.py  schema.py
src/doc2md/errors/: __init__.py  exceptions.py  fallback.py  retry.py
src/doc2md/models/: allowlist.py  discovery.py  models.yaml
src/doc2md/pipeline/: data_flow.py  engine.py  graph.py  merger.py  page_router.py  parallel_executor.py  postprocessor.py  preprocessor.py  step_executor.py
src/doc2md/transforms/: __init__.py  add_frontmatter.py  deduplicate_content.py  fix_table_alignment.py  normalize_headings.py  strip_page_numbers.py
src/doc2md/utils/: image.py
src/doc2md/vlm/: client.py  prompt_builder.py  response_parser.py
tests/: conftest.py
tests/test_agents/: test_builtin.py  test_classifier.py  test_engine.py  test_integration.py  test_registry.py
tests/test_blackboard/: test_board.py  test_events.py  test_integration.py  test_merge.py  test_regions.py  test_serializer.py  test_writers.py
tests/test_cache/: test_disk.py  test_integration.py  test_keys.py  test_manager.py  test_memory.py  test_stats.py
tests/test_cli/: test_cli.py
tests/test_concurrency/: test_pool.py  test_rate_limiter.py
tests/test_confidence/: test_calibration.py  test_combiner.py  test_engine.py  test_integration.py  test_report.py  test_signals.py
tests/test_config/: test_defaults.py  test_hierarchy.py  test_loader.py
tests/test_errors/: test_exceptions.py  test_fallback.py  test_retry.py
tests/test_models/: test_allowlist.py  test_discovery.py
tests/test_pipeline/: test_data_flow.py  test_engine.py  test_graph.py  test_integration.py  test_merger.py  test_page_router.py  test_parallel.py  test_postprocessor.py  test_preprocessor.py  test_step_executor.py
tests/test_transforms/: test_transforms.py
tests/test_vlm/: test_client.py  test_prompt_builder.py  test_response_parser.py
(+17 files in other folders)
